terraform-1/modules/vpc/main.tf
resource "google_compute_firewall" "firewall_puma" {
  name    = "allow-puma-default-new"
  network = "default"
  allow {
    protocol = "tcp"
    ports    = ["9292"]
  }
  source_ranges = ["0.0.0.0/0"]
  target_tags   = ["reddit-app"]
}


resource "google_compute_firewall" "firewall_mongo" {
  name    = "allow-mongo-default-new"
  network = "default"
  allow {
    protocol = "tcp"
    ports    = ["27017"]
  }
  source_tags = ["reddit-app"]
  target_tags   = ["reddit-db"]

}

resource "google_compute_firewall" "firewall_ssh" {
  name    = "default-allow-ssh-new"
  network = "default"
  allow {
    protocol = "tcp"
    ports    = ["22"]
  }
  source_ranges = ["0.0.0.0/0"]

}
